New feature frontend finished

--- a/Frontend/BugManager/src/app/components/bugs/bugs.component.html
+++ b/Frontend/BugManager/src/app/components/bugs/bugs.component.html
@@ -2,6 +2,5 @@
 </button>
 
 
-<app-bugs-table [dataSource]="dataSource" [buttonsColumns]="buttonsColumns" [buttonsActions]="buttonsActions"
-  (sendBugs)="sendBugToNextTable($event)">
+<app-bugs-table [dataSource]="dataSource" [buttonsColumns]="buttonsColumns" [buttonsActions]="buttonsActions" (sendBugs)="sendBugToNextTable($event)">
 </app-bugs-table>
