--- a/Frontend/BugManager/src/app/components/generic-table/generic-table.component.html
+++ b/Frontend/BugManager/src/app/components/generic-table/generic-table.component.html
@@ -1,24 +1,23 @@
 <mat-spinner *ngIf="loading" [diameter]="30"></mat-spinner>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 ">
-  <ng-container *ngFor="let col of columns">
-    <ng-container matColumnDef="{{col.property}}">
-      <th mat-header-cell *matHeaderCellDef> {{col.header}} </th>
-      <td *matCellDef="let element">
+    <ng-container *ngFor="let col of columns;let indexOfelement=index;">
+        <ng-container matColumnDef="{{col.property}}">
+            <th mat-header-cell *matHeaderCellDef> {{col.header}} </th>
+            <td *matCellDef="let element">
 
-        <ng-container *ngIf="col.type == columnsTypes.Object">
-          {{col.display(element[col.property])}}
-        </ng-container>
+                <ng-container *ngIf="col.type == columnsTypes.Object">
+                    {{col.display(element[col.property])}}
+                </ng-container>
 
-        <ng-container *ngIf="col.type == columnsTypes.Button">
-          <button (click)="buttonsActions.get(col.property)?.onClick(element)" mat-flat-button
-            color={{buttonsActions.get(col.property)?.color(element)}}>
+                <ng-container *ngIf="col.type == columnsTypes.Button">
+                    <button (click)="buttonsActions.get(col.property)?.onClick(element)" mat-flat-button id="classifyButton-{{columns[0].display(element[columns[0].property])}}" color={{buttonsActions.get(col.property)?.color(element)}}>
             {{buttonsActions.get(col.property)?.text(element)}}</button>
+                </ng-container>
+            </td>
         </ng-container>
-      </td>
     </ng-container>
-  </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;">
-  </tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+    </tr>
 </table>
